[package]
name = "pidj"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bytes = "1.2.1"
embedded-hal = "0.2.7"
flume = "0.10.14"
globwalk = "0.8.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
palette = { version = "0.6.1" }
rayon = "1.6.0"
rodio = "0.16.0"
rppal = { version = "0.14", features = ["hal"] }
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
