[package]
name = "pidj"
version = "0.1.0"
edition = "2021"

[profile.dev]
strip = "debuginfo"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-walkdir = "0.2.0"
bytes = "1.2.1"
ctrlc = "3.2.3"
druid = { git = "https://github.com/linebender/druid", rev = "ac38151" }
embedded-hal = "0.2.7"
flume = "0.10.14"
futures = "0.3.25"
indicatif = { version = "0.17.2", features = ["rayon"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
palette = { version = "0.6.1" }
rayon = "1.6.0"
rodio = "0.16.0"
rppal = { version = "0.14", features = ["hal"] }
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
